tests/negative/gold/constant-name-test.gold
tests/negative/constant-name-test.toit:10:3: error: Can't use '_' as name for a field
  _ ::= 42
  ^
tests/negative/constant-name-test.toit:9:3: warning: Final field with constant-like name: 'CONST'. Missing 'static'?
  CONST ::= 499
  ^~~~~
tests/negative/constant-name-test.toit:11:3: warning: Final field with constant-like name: 'A-B'. Missing 'static'?
  A-B ::= 43
  ^~~
tests/negative/constant-name-test.toit:12:3: warning: Final field with constant-like name: 'A-B499'. Missing 'static'?
  A-B499 ::= 43
  ^~~~~~
Compilation failed
